# checkr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.py  main.py  pyproject.toml
api/: jobs.py  validators.py
config/: llm.yaml  provider.yaml  provider.yaml.example
core/: app.py  config.py  logging_config.py
devops/alerting/: alert_rules.yml  slo_rules.yml
docs/: async-jobs.md  comparison.md
frontend/validators/: README.md  base_remote_geval_validator.py  base_remote_validator.py  base_remote_validator_per_item.py  base_validator.py
frontend_validators/gate10_external_services/: configurable_remote_validator.py  (+1 more)
grafana/: checkr-dashboard.json
middlewares/: logging_middleware.py  metrics_middleware.py
providers/: backend.py  base.py  factory.py  github.py  gitlab.py  mock.py
schemas/: jobs.py  validators.py
services/: backend_validators_registry.py  frontend_validators_registry.py  job_service.py  job_worker.py
static/: async-playground.html  async-validator.js  index.html  json-validator.js  pyodide-loader.js
tests/: conftest.py  test_async_utils.py  test_backend_registry_service.py  test_frontend_registry_service.py  test_gabriel_validators.py  test_geval_validators.py  test_trace_api.py  test_validators_api.py  test_validators_runtime.py  test_vega_charts.py
utils/: async_utils.py  frontmatter.py  vega_charts.py  yaml.py
validators/: README.md  base_gabriel_validator.py  base_geval_validator.py  base_remote_geval_validator.py  base_remote_validator.py  base_remote_validator_per_item.py  base_validator.py
(+66 files in other folders)
